MDEV-13694: Wrong result upon GROUP BY with orderby_uses_equalities=on

For the case when  the SJM scan table is the first table in the join order,
then if we want to do the sorting on the SJM scan table, then we need to
make sure that we unpack the values to base table fields in two cases:
  1) Reading the SJM table and writing the sort-keys inside the sort-buffer
  2) Reading the sorted data from the sort file